- Added support for LIST -1 option (ignored), found in SMF Webinstall script.

-------------------------------------------------------------------------------
Changes in version 1.42

- Fixed bug in reporting an error in closing the sending socket.

- Fixed bug in reporting an error to list a single entry.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.41

- Fix a one-off buffer overrun in ASCII conversion in the STOR command.

- Fix resetting the output buffer between listings.

- Added a $CONNECT_TIMEOUT setting to set timeouts on data connections.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.40

- File transfer handling has been completely rewritten to handle
  interrupts on the command channel.  Closing the command channel or
  sending another command will interrupt any data transfer in progress.

- Fixed a longstanding bug in the handling of $MESSAGEFILE

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.30

- Switched to the CVM v2 client library.

- Added a $AUTH_ATTEMPTS control to twoftpd-auth to limit the number of
  authentication attempts per session.

- Rewrote the directory listing code to fix listing files with special
  characters in their names.

- Added a transfer rate (bytes/sec) indicator to transfer logs.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.21
