@@ -18,7 +18,7 @@
 #include <string.h>
 #include <sys/types.h>
 #include <unistd.h>
-#include <iobuf/iobuf.h>
+#include <bglibs/iobuf.h>
 #include "log.h"
 
 static pid_t pid = 0;
